sort.basic.bubble.AlgBubbleSort1.scala.error
Compilation error:
AlgBubbleSort1:16: error: ';' expected but 'while' found.
  }while(test==false)
   ^AlgBubbleSort1:20: error: 'while' expected but '}' found.
} 
^