sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  
  var i:Int=0
  var cpt:Int=0
  var test:Boolean=false
  
	do{
    for(i<-0 to getNombreValeurs()-2){
      if(plusPetit(i,i+1)==false){
        echange(i,i+1)
        cpt+=1
      }


  }while(test==false)
  
  
}
}